feat admin compilerende versie
