# src/main/kotlin/io/vliet/plusmin/controller/PeriodeController.kt
@@ -35,14 +35,14 @@ class PeriodeController {
 
 
     @Operation(summary = "GET de periodes voor hulpvrager")
-    @GetMapping("/hulpvrager/{hulpvragerId}")
+    @GetMapping("/administratie/{administratieId}")
     fun getPeriodesVoorHulpvrager(
-        @PathVariable("hulpvragerId") hulpvragerId: Long
+        @PathVariable("administratieId") administratieId: Long
     ): ResponseEntity<Any> {
-        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(hulpvragerId)
-        logger.info("GET PeriodeController.getPeriodesVoorHulpvrager() voor ${hulpvrager.email} door ${vrijwilliger.email}.")
+        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(administratieId)
+        logger.info("GET PeriodeController.getPeriodesVoorHulpvrager() voor ${hulpvrager.naam} door ${vrijwilliger.bijnaam}/${vrijwilliger.subject}.")
         val formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd")
-        return ResponseEntity.ok().body(periodeRepository.getPeriodesVoorGebruiker(hulpvrager).map {
+        return ResponseEntity.ok().body(periodeRepository.getPeriodesVoorAdministrtatie(hulpvrager).map {
             PeriodeDTO(
                 it.id,
                 formatter.format(it.periodeStartDatum),
@@ -53,65 +53,65 @@ class PeriodeController {
     }
 
     @Operation(summary = "PUT sluit een periode voor hulpvrager")
-    @PutMapping("/hulpvrager/{hulpvragerId}/sluiten/{periodeId}")
+    @PutMapping("/administratie/{administratieId}/sluiten/{periodeId}")
     fun sluitPeriodeVoorHulpvrager(
         @Valid @RequestBody saldoLijst: List<Saldo.SaldoDTO>,
-        @PathVariable("hulpvragerId") hulpvragerId: Long,
+        @PathVariable("administratieId") administratieId: Long,
         @PathVariable("periodeId") periodeId: Long
     ): ResponseEntity<Any> {
-        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(hulpvragerId)
-        logger.info("PUT PeriodeController.sluitPeriodeVoorHulpvrager() $periodeId voor ${hulpvrager.email} door ${vrijwilliger.email}.")
+        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(administratieId)
+        logger.info("PUT PeriodeController.sluitPeriodeVoorHulpvrager() $periodeId voor ${hulpvrager.naam} door ${vrijwilliger.bijnaam}/${vrijwilliger.subject}.")
         periodeUpdateService.sluitPeriode(hulpvrager, periodeId, saldoLijst)
         return ResponseEntity.ok().build()
     }
 
     @Operation(summary = "PUT ruim een periode op (verwijder de betalingen) voor hulpvrager")
-    @PutMapping("/hulpvrager/{hulpvragerId}/opruimen/{periodeId}")
+    @PutMapping("/administratie/{administratieId}/opruimen/{periodeId}")
     fun ruimPeriodesOpVoorHulpvrager(
-        @PathVariable("hulpvragerId") hulpvragerId: Long,
+        @PathVariable("administratieId") administratieId: Long,
         @PathVariable("periodeId") periodeId: Long
     ): ResponseEntity<Any> {
-        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(hulpvragerId)
-        logger.info("PUT PeriodeController.ruimPeriodesOpVoorHulpvrager() $periodeId voor ${hulpvrager.email} door ${vrijwilliger.email}.")
+        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(administratieId)
+        logger.info("PUT PeriodeController.ruimPeriodesOpVoorHulpvrager() $periodeId voor ${hulpvrager.naam} door ${vrijwilliger.bijnaam}/${vrijwilliger.subject}.")
         val periode = periodeService.getPeriode(periodeId, hulpvrager)
         periodeUpdateService.ruimPeriodeOp(hulpvrager, periode)
         return ResponseEntity.ok().build()
     }
 
     @Operation(summary = "PUT heropen een periode (en verwijder de saldi) voor hulpvrager")
-    @PutMapping("/hulpvrager/{hulpvragerId}/heropenen/{periodeId}")
+    @PutMapping("/administratie/{administratieId}/heropenen/{periodeId}")
     fun heropenPeriodeVoorHulpvrager(
-        @PathVariable("hulpvragerId") hulpvragerId: Long,
+        @PathVariable("administratieId") administratieId: Long,
         @PathVariable("periodeId") periodeId: Long
     ): ResponseEntity<Any> {
-        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(hulpvragerId)
-        logger.info("PUT PeriodeController.heropenPeriodeVoorHulpvrager() $periodeId voor ${hulpvrager.email} door ${vrijwilliger.email}.")
+        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(administratieId)
+        logger.info("PUT PeriodeController.heropenPeriodeVoorHulpvrager() $periodeId voor ${hulpvrager.naam} door ${vrijwilliger.bijnaam}/${vrijwilliger.subject}.")
         val periode = periodeService.getPeriode(periodeId, hulpvrager)
         periodeUpdateService.heropenPeriode(hulpvrager, periode)
         return ResponseEntity.ok().build()
     }
 
     @Operation(summary = "PUT wijzig een periode voor hulpvrager")
-    @PutMapping("/hulpvrager/{hulpvragerId}/wijzig-periode-opening/{periodeId}")
+    @PutMapping("/administratie/{administratieId}/wijzig-periode-opening/{periodeId}")
     fun wijzigPeriodeOpeningVoorHulpvrager(
         @Valid @RequestBody nieuweOpeningsSaldi: List<Saldo.SaldoDTO>,
-        @PathVariable("hulpvragerId") hulpvragerId: Long,
+        @PathVariable("administratieId") administratieId: Long,
         @PathVariable("periodeId") periodeId: Long
     ): ResponseEntity<Any> {
-        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(hulpvragerId)
-        logger.info("PUT PeriodeController.wijzigPeriodeOpeningVoorHulpvrager() $periodeId voor ${hulpvrager.email} door ${vrijwilliger.email}.")
+        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(administratieId)
+        logger.info("PUT PeriodeController.wijzigPeriodeOpeningVoorHulpvrager() $periodeId voor ${hulpvrager.naam} door ${vrijwilliger.bijnaam}/${vrijwilliger.subject}.")
         periodeUpdateService.wijzigPeriodeOpening(hulpvrager, periodeId, nieuweOpeningsSaldi)
         return ResponseEntity.ok().build()
     }
 
     @Operation(summary = "GET voorstel voor het sluiten van een periode voor hulpvrager")
-    @GetMapping("/hulpvrager/{hulpvragerId}/sluitvoorstel/{periodeId}")
+    @GetMapping("/administratie/{administratieId}/sluitvoorstel/{periodeId}")
     fun sluitPeriodeVoorstelVoorHulpvrager(
-        @PathVariable("hulpvragerId") hulpvragerId: Long,
+        @PathVariable("administratieId") administratieId: Long,
         @PathVariable("periodeId") periodeId: Long
     ): ResponseEntity<Any> {
-        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(hulpvragerId)
-        logger.info("GET PeriodeController.sluitPeriodeVoorstelVoorHulpvrager() $periodeId voor ${hulpvrager.email} door ${vrijwilliger.email}.")
+        val (hulpvrager, vrijwilliger) = gebruikerService.checkAccess(administratieId)
+        logger.info("GET PeriodeController.sluitPeriodeVoorstelVoorHulpvrager() $periodeId voor ${hulpvrager.naam} door ${vrijwilliger.bijnaam}/${vrijwilliger.subject}.")
         return ResponseEntity.ok().body(periodeUpdateService.voorstelPeriodeSluiten(hulpvrager, periodeId))
     }
 }
